@@ -1,6 +1,9 @@
 2.3.20 (2017-XX-XX)
 -------------------
 
+New features
+ - [web] use "date" extension of Sieve to enable/disable vacation auto-reply (#1530, #1949)
+
 Bug fixes
  - [core] remove all alarms before sending IMIP replies (#3925)
 
